--- a/root/ngtemplate/input/sequence/by_products.tt
+++ b/root/ngtemplate/input/sequence/by_products.tt
@@ -50,10 +50,6 @@
                 </div>
             </div>
             <div class="form-group">
-                <label><input type="checkbox" name="prod-[% pcr.id %]-skip_chromats" class="skip-chromats" value="1"> Chromats not required</label>
-                <button type="button" class="btn btn-xs btn-default" onclick="return toggleAllChromats()">set all</button>
-            </div>
-            <div class="form-group">
                 <label for="prod-<% pcr.id %>-sequence-type">Sequence type</label>
                 <select class="form-control" name="prod-<% pcr.id %>-sequence-type" id="prod-<% pcr.id %>-sequence-type">
                     <option value="">unknown</option>
@@ -77,6 +73,13 @@
                         </option>
                     <% END %>
                 </select>
+            </div>
+            <div class="form-group">
+                <label><input type="checkbox" name="prod-[% pcr.id %]-skip_chromats" class="skip-chromats" value="1"> Chromats not required</label>
+                <button type="button" class="btn btn-xs btn-default" onclick="return toggleAllChromats()">set all</button>
+                <p class="help-block">Chromats should be uploaded for all Sanger
+                sequencing. Only omit chromats when adding consensus sequences
+                based on next-generation sequencing.</p>
             </div>
         </div>
         <div class="col-md-6">
