Better encapsulation and button label

--- a/root/ngtemplate/input/sequence/by_products.tt
+++ b/root/ngtemplate/input/sequence/by_products.tt
@@ -76,7 +76,7 @@
             </div>
             <div class="form-group">
                 <label><input type="checkbox" name="prod-[% pcr.id %]-skip_chromats" class="skip-chromats" value="1"> Chromats not required</label>
-                <button type="button" class="btn btn-xs btn-default" onclick="return toggleAllChromats()">set all</button>
+                <button type="button" class="btn btn-xs btn-default skip-chromats-toggle">toggle all</button>
                 <p class="help-block">Chromats should be uploaded for all Sanger
                 sequencing. Only omit chromats when adding consensus sequences
                 based on next-generation sequencing.</p>
