Forbid adding notes to obsolete revisions

--- a/root/ngtemplate/sequence/show.tt
+++ b/root/ngtemplate/sequence/show.tt
@@ -78,7 +78,9 @@
         [% ELSE %]
             <p>No notes.</p>
         [% END %]
-        [% IF scientist.can_edit %]
+          [% IF virodb_sequence.na_sequence_revision ==
+                virodb_sequence.latest_revision.na_sequence_revision &&
+                scientist.can_edit %]
             <form role="form" method="POST" action="[% c.uri_for_action('/sequence/create_note', [ virodb_sequence.idrev ] )%]">
                 <div class="input-group">
                     <input name="body" class="form-control" placeholder="New note…">
